--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,14 @@
 [tox]
-envlist = django1-10-6, style
+envlist = py36
+; py36-django1-10-6 ,style
 skipsdist = True
 
 [testenv]
-commands = django-admin.py test
-setenv = 
+changedir = {toxinidir}/django
+envlogdir = {toxinidir}/django/logs
+setenv =
     DJANGO_SETTINGS_MODULE=vvp.settings.tox_settings
-    PYTHONPATH={toxinidir}
+    PYTHONPATH={toxinidir}/django
     SECRET_KEY=6mo22&_gtjf#wktqf1#ve^7=w6kx)uq0u*4ksk^aq8lte&)yul
     ENVIRONMENT=development
     PROGRAM_NAME_URL_PREFIX=vvp
@@ -31,19 +33,20 @@ setenv =
     AWS_SECRET_ACCESS_KEY=TKoiwxziUWG9cTYUknUkFGmmyuQ27nP2lCiutEsD
     STATIC_ROOT=/app/htdocs
 
-[base]
+[testenv:py36-django1-10-6]
+basepython = python3.6
 deps = -r{toxinidir}/django/requirements.txt
-
-[testenv:django1-10-6]
-deps =
-    {[base]deps}
+commands =  python --version
+            django-admin.py test
 
 [testenv:style]
+basepython = python3
+deps = flake8
 commands = flake8
-
-[testenv:py3]
-basepython=python3
 
 [flake8]
 show-source = True
 exclude=venv-tox,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,build
+
+[testenv:py36]
+commands = python --version
