Missing env params
Add missed ENV params

Issue-ID: VVP-25
Change-Id: Ib7b7a49be5b42b59dcd61c98586aba127d296d71
Signed-off-by: Edan Binshtok <eb578m@intl.att.com>

--- a/tox.ini
+++ b/tox.ini
@@ -31,6 +31,9 @@ setenv =
     AWS_ACCESS_KEY_ID=aaa049-FAKE-ACCESS-KEY-575840
     AWS_SECRET_ACCESS_KEY=aaa049575840-SOME-FAKE-SECRET-KEY-aaa049575840
     STATIC_ROOT=/app/htdocs
+    SERVICE_PROVIDER = exmaple_sp
+    PROGRAM_NAME = example_pn
+    SERVICE_PROVIDER_DOMAIN = example_domain
 
 [testenv:py36-django1-10-6]
 basepython = python3.6
