[VVP] adding config for test coverage report
modifed tox, pom, and tests to create coverage report

Change-Id: I98321c3d5c205622a3b4f5662566934f323ba70f
Issue-ID: VVP-56
Signed-off-by: stark, steven <ss820f@att.com>

--- a/tox.ini
+++ b/tox.ini
@@ -38,8 +38,10 @@ setenv =
 [testenv:py36-django1-10-6]
 basepython = python3.6
 deps = -r{toxinidir}/django/requirements.txt
+    django-jenkins
+    coverage
 commands =  python --version
-            django-admin.py test
+    python {toxinidir}/django/manage.py jenkins --enable-coverage
 
 [testenv:style]
 basepython = python3
