--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <groupId>org.onap.vvp.engagementmgr</groupId>
   <artifactId>engagementmgr</artifactId>
   <packaging>pom</packaging>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <name>vvp-engagementmgr</name>
 
   <properties>
