[VVP] engagement manager jenkins build not working
Change-Id: I3a8c58e8a9f67f8ec08c70ea674034cabb3228a9
Issue-ID: VVP-111
Signed-off-by: stark, steven <steven.stark@att.com>

--- a/django/requirements.txt
+++ b/django/requirements.txt
@@ -44,13 +44,13 @@ celery[redis]
 configparser
 django-cors-headers
 django-storages
-djangorestframework
-djangorestframework-jwt
+djangorestframework==3.8.2
+djangorestframework-jwt==1.11.0
 enum34
 mock
 openpyxl
 psycopg2
-python-jenkins
+python-jenkins==1.2.1
 pytz
 requests
 requests-aws
