[VVP] freeze python requirements in vvp projects
Change-Id: I5b85a4417187d63d35e9cafd54631fd87fe8b911
Issue-ID: VVP-115
Signed-off-by: stark, steven <steven.stark@att.com>

--- a/django/requirements.txt
+++ b/django/requirements.txt
@@ -37,31 +37,31 @@
 #
 # ECOMP is a trademark and service mark of AT&T Intellectual Property.
 Django==1.10.6
-apscheduler
-bleach
-boto
-celery[redis]
-configparser
-django-cors-headers
-django-storages
+apscheduler==3.5.3
+bleach==3.0.2
+boto==2.49.0
+celery[redis]==4.2.1
+configparser==3.5.0
+django-cors-headers==2.4.0
+django-storages==1.7.1
 djangorestframework==3.8.2
 djangorestframework-jwt==1.11.0
-enum34
-mock
-openpyxl
-psycopg2
+enum34==1.1.6
+mock==2.0.0
+openpyxl==2.5.8
+psycopg2==2.7.5
 python-jenkins==1.2.1
-pytz
-requests
-requests-aws
-retrying
-slacker
-sshpubkeys
-tap.py
-validate-email-address
-validate_email
+pytz==2018.5
+requests==2.19.1
+requests-aws==0.1.8
+retrying==1.3.3
+slacker==0.9.65
+sshpubkeys==3.1.0
+tap.py==2.5
+validate-email-address==1
+validate_email==1.3
 wheel==0.31.1
-oauthlib
-requests_oauthlib
-itsdangerous
-pytest
+oauthlib==2.1.0
+requests_oauthlib==1.0.0
+itsdangerous==0.24
+pytest==3.9.1
