--- a/tox.ini
+++ b/tox.ini
@@ -38,14 +38,14 @@ setenv =
 [testenv:py36-django1-10-6]
 basepython = python3.6
 deps = -r{toxinidir}/django/requirements.txt
-    django-jenkins
-    coverage
+    django-jenkins==0.110.0
+    coverage==4.5.1
 commands =  python --version
     python {toxinidir}/django/manage.py jenkins --enable-coverage
 
 [testenv:style]
 basepython = python3
-deps = flake8
+deps = flake8==3.4.1
 commands = flake8
 
 [flake8]
